[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pgsm"
version = "0.0.0"
authors = [
  { name="Rashid Harvey", email="r.harvey@outlook.de" },
]
description = "A simple state manager for pygame."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "pygame >= 2.5.2",
]

[project.urls]
"Homepage" = "https://github.com/theRealProHacker/StateManager"
"Bug Tracker" = "https://github.com/theRealProHacker/StateManager/issues"
